examples/test/testpolicy15754.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15754
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key42: value14
      key12: value19
      key40: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value13
          key5: value14
          key4: value34
      podSelector:
        matchLabels:
          key48: value22
